--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chessie Bell Sports Massage</title>
+  <title>About - Chessie Bell Sports Massage</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,11 +21,11 @@
     </div>
   </header>
 
-  <section id="home">
-    <div class="hero">
-      <h2>Revitalizing Sports Massage in Winchester</h2>
-      <p>Helping athletes recover, perform, and excel through expert care.</p>
-      <a href="contact.html" class="btn">Book an Appointment</a>
+  <section id="about">
+    <div class="container">
+      <h2>About Chessie</h2>
+      <p>Hi! I'm Chessie Bell, a certified sports massage therapist based in Winchester, Hampshire. My passion lies in helping athletes of all levels improve their performance, recover from injuries, and achieve their fitness goals. With years of experience and a deep understanding of the body's mechanics, I offer tailored treatments to meet your individual needs.</p>
+      <p>Whether you're preparing for your next big race or just need to unwind, I'm here to help you every step of the way.</p>
     </div>
   </section>
 
