--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chessie Bell Sports Massage</title>
+  <title>Services - Chessie Bell Sports Massage</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,11 +21,15 @@
     </div>
   </header>
 
-  <section id="home">
-    <div class="hero">
-      <h2>Revitalizing Sports Massage in Winchester</h2>
-      <p>Helping athletes recover, perform, and excel through expert care.</p>
-      <a href="contact.html" class="btn">Book an Appointment</a>
+  <section id="services">
+    <div class="container">
+      <h2>Our Services</h2>
+      <ul>
+        <li><strong>Deep Tissue Sports Massage:</strong> Relieve muscle tension and improve mobility.</li>
+        <li><strong>Injury Prevention and Recovery:</strong> Targeted therapy to prevent and recover from injuries.</li>
+        <li><strong>Pre and Post-Event Massage:</strong> Optimize performance and reduce recovery time.</li>
+        <li><strong>Relaxation and Stress Relief:</strong> Find balance and relax with gentle therapeutic massage.</li>
+      </ul>
     </div>
   </section>
 
