--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <section id="contact">
     <div class="container">
       <h2>Contact</h2>
-      <p>To begin your sports recovery and book an appointment, please contact: chessiebell.sportsmassage@gmail.com</a></p>
+      <p>To begin your sports recovery and book an appointment, please contact: <strong>chessiebell.sportsmassage@gmail.com</strong></p>
     </div>
   </section>
 
